
* Verilator 3.865 devel

***   Add optimization of wires from arrayed cells, msg1447. [Jie Xu]

***   Add optimization of operators between concats, msg1447. [Jie Xu]

****  Fix generate unrolling with function call, bug830. [Steven Slatter]

****  Fix cast-to-size context-determined sizing, bug828. [Geoff Barrett]

****  Fix not tracing modules following primitives, bug837. [Jie Xu]


* Verilator 3.864 2014-09-21

***   Support power operator with real, bug809. [Jonathon Donaldson]

****  Improve verilator_profcfunc time attributions. [Jonathon Donaldson]

****  Fix duplicate anonymous structures in $root, bug788. [Bob Newgard]

****  Fix mis-optimization of bit-swap in wide signal, bug800. [Jie Xu]

****  Fix error when tracing public parameters, bug722. [Jonathon Donaldson]

****  Fix dpiGetContext in dotted scopes, bug740. [Geoff Barrett]

****  Fix over-shift structure optimization error, bug803. [Jeff Bush]

****  Fix optional parameter keyword in module #(), bug810. [Iztok Jeras]

****  Fix $warning/$error multi-argument ordering, bug816. [Jonathon Donaldson]

****  Fix clang warnings, bug818. [Iztok Jeras]

****  Fix string formats under deep expressions, bug820. [Iztok Jeras]


* Verilator 3.862 2014-06-10

***   Using command line -Wno-{WARNING} now overrides file-local lint_on.

***   Add -P to suppress `line and blanks with preprocessing, bug781. [Derek Lockhart]

***   Support SV 2012 package import before port list.

****  Change SYMRSVDWORD to print as warning rather than error.

****  Fix seg-fault with variable of parameterized interface, bug692. [Jie Xu]

****  Fix false name conflict on cells in generate blocks, bug749. [Igor Lesik]

****  Fix pattern assignment to basic types, bug767. [Jie Xu]

****  Fix pattern assignment to conditionals, bug769. [Jie Xu]

****  Fix shift corner-cases, bug765, bug766, bug768, bug772, bug774, bug776. [Clifford Wolf]

****  Fix C compiler interpreting signing, bug773. [Clifford Wolf]
