@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix not tracing modules following primitives, bug837. [Jie Xu]
 
+****  Fix trace overflow on huge arrays, bug834. [Geoff Barrett]
+
 
 * Verilator 3.864 2014-09-21
 
